tests/fixtures/invalid/bytes_notin_float.py
# Cannot use 'not in' with Bytes and Float
x: bool = b"hello" not in 1.0
